# jhLog

./: .gitignore  LICENSE  README.md  baseSink.h  common.h  jhLog.h  logMsg.h  logger.cpp  logger.h  simpleFileSink.cpp  simpleFileSink.h  stdoutSink.cpp  stdoutSink.h  udpSink.cpp  udpSink.h
example/: CMakeLists.txt  examples.cpp
